<resources>
    <string name="app_name">Note Restaurant Application</string>
    <string name="permission_guide">[설정] > [권한]에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_access">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다</string>
    <string name="writeDialog_title">이전에 작성 중인 페이지를 이어 쓰겠습니까?</string>
    <string name="writeDialog_yes">네</string>
    <string name="writeDialog_no">아니요</string>
    <string name="Recommendation_text">추천 맛집</string>
    <string name="note_text">노트</string>
    <string name="writingOut_text">맛집 작성</string>
    <string name="edit_note">포스트 수정</string>
    <string name="myPage_text">마이페이지</string>
    <string name="LocationInfoButton_text">장소 정보 보기</string>
    <string name="shareKakao_text">카카오톡 공유</string>
    <string name="rating_text">평점을 입력해 주세요</string>
    <string name="rating_inPut">0~5점</string>
    <string name="title_text">제목 : </string>
    <string name="content_text">내용을 입력하세요</string>
    <string name="photo_text">사진</string>
    <string name="address_text">주소</string>
    <string name="address_hint">주소를 입력하세요</string>
    <string name="phone_text">연락처</string>
    <string name="phone_hint">연락처를 입력하세요</string>
    <string name="susi_title">이치에</string>
    <string name="susi_subTitle">분위기와 맛을 둘다 챙겨보자</string>
    <string name="susi_address">서울시 강남구 신사동 656-7</string>
    <string name="susi_phone">070-4273-4087</string>
    <string name="susi_content">친구들이랑 모임있을 때 자주 가는 곳인데 분위기도 좋고 요리도 너무 맛있어요!
제 최애는 카이센토마토니ㅎㅎ 로제소스랑 해산물의 조화가 굳!! 갈때마다 꼭 주문하는 것같아요.
근데 여기 웨이팅이 있을 때는 기다리기 힘든 것 같아요 ㅠ
요새 맛집들 나우웨이팅 많이 쓰는 것 같은데 여기도 그런 웨이팅 서비스있으면 좋을 것 같아요.
그리고 저번에 갔을 때 점원이 요리에 대해서 설명을 잘 못해주셔서 그것도 아쉬웠어요
그런 부분들이 개선되면 더 자주올거같아요!!</string>
    <string name="gogi_title">브라이리퍼블릭</string>\
    <string name="gogi_subTitle">많이 아쉽다</string>
    <string name="gogi_address">서울시 용산구 이태원동 63-4</string>
    <string name="gogi_phone">070-8879-1967</string>
    <string name="gogi_content">지난 1년간 오고싶었다고 생각했던 브라이리퍼블릭에 왔다. 망플에서도 점수가 높고 주변 사람들도 꽤나 호평을 해서 큰 기대를 안고 메뉴를 주문했다.

사람들이 가장 많이 먹는것 같은 미트플래터를 주문했는데 양고기 2덩어리와 소세지 2개 양배추코울슬로 옥수수 으깬감자가 나왔다.
원래 시금치가 나온다고 했었는데 옥수수호 대체된것 같았다. 옥수수는 그냥 옥수수 통조림에서 꺼낸 듯 한 맛이였고 양배추 코울슬로도 그냥 롯데리아에서 주는 코울슬로랑 다를바 없었다.

양이 적은것 같진 않았다. 35,000원에 꽤나큰 양고기 두덩이와 수제소세지가 나오는데 개인적으로 제일 맛있던건 갈색? 수제소세지이다. 양고기는 영등포에서 가본 양고기집이 훨씬맛있었고, 여긴 알려진만큼의 특별함은 없는것 같다.

그래도 외국인들이 많이오고 주문을 받는 사람들도 전부 외국인이다. 그래서 뭐 그런데서 오는 재미가 있지않은가 ㅋㅋ 결과적으로는 다음에는 다른데를 갈듯하다.
    </string>

    <string name="pasta_title">성신여대 이태리총각</string>
    <string name="pasta_subTitle">성북구 표준 양식집!</string>
    <string name="pasta_address">서울시 성북구 삼선동5가 398</string>
    <string name="pasta_phone">02-6405-8893</string>
    <string name="pasta_content">마르게리따 루꼴라 -
루꼴라 라는 풀떼기를 처음 먹어봤어요!() 풀떼기라 함은 자고로 부추 상추 깻잎이라고 생각했던 제 자신을 반성하는 계기가 되었습니다. 루꼴라 단독으로 집어먹으면 쌉싸름한 것이 매력이 별로 없는데, 이 집 마르게리따랑 먹으면 쌉쌀한 맛은 거의 안느껴지고 풀에서 고소하고 달달한 맛이 납니다! 먹으면서 신기했어요 맛의 하모니가 이런거신가 싶기도 하고. 이야기가 좀 샜네요! 화덕에서 바로 구워주는 피자는 맛이 없을 수가 없지만, 이 집 피자는 우선 깔끔한 맛이 굉장히 매력적이며, 치즈가 정말 적당량! 들어있어 느끼하거나 부족함을 느낄 새 없이 조화롭게 입안 가득 신선 깔끔 고소 담백한 맛을 채워줍니다. 아메리카 스타일의 피자는 아니라 치즈 듬뿍! 느끼! 소스 듬뿍! 을 원하시는 분들에게는 안맞을수도 있어요 :) 클래식한 맛 그 자체의 피자입니다. 저는 강추!

새우 로제 파스타 -
맛 보기도 전에 새우 보고 아 이집은 기본이 되었구나 싶었습니다. 새우 파스타 라는 이름에 걸맞게, 거진 열 마리 정도의 새우가 @.@ 한 입 씹으면 탱글한게 완전 신선한 아가들로만 잘 요리하는 것 같았어요. 먹은지 꽤 오래되어 맛은 기억이 잘 안나지만, 마지막 파스타가 차갑게 식었을 때도 맛있게 먹었던 기억이 나네요 :) 파스타는 식으면 면이 딱딱해지며 맛이 안좋은 쪽으로 변하는 경우가 많았던 것으로 기억하는데, 이 집 파스타는 느끼하지 않고 부드러운 맛이 마지막까지 이어졌던 기억이 나네요 :) 제일 맛있는 파스타를 여쭤보니 알료올료를 추천해주셨어서, 다음에는 그 것을 먹어보려고 합니다!

+커플 둘이 가서 메뉴 2개 시키면 남길 정도로 양이 많았습니다. 남자 둘이 가니 딱 깔끔하게 해치울 수 있었어요 :) 너무 좋아요!
</string>
</resources>
