<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.EditNoteActivity">

    <TextView
        android:id="@+id/edit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/edit_note"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/edit_editPost_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_note_black_32dp"
        tools:ignore="VectorDrawableCompat" />

    <View
        android:id="@+id/edit_top_view"
        android:layout_width="wrap_content"
        android:layout_height="0.3dp"
        android:layout_marginTop="8dp"
        android:background="#4682B4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_tv" />

    <TextView
        android:id="@+id/edit_title_tv"
        android:text="@string/title_text"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_title_et"/>


    <EditText
        android:id="@+id/edit_title_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:hint=""
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf= "@+id/edit_title_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_top_view" />


    <RatingBar
        android:id="@+id/edit_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:rating="5"
        android:numStars="5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_title_et" />

    <TextView
        android:id="@+id/edit_rating_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edit_ratingBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <View
        android:id="@+id/edit_middle_view"
        android:layout_width="wrap_content"
        android:layout_height="0.3dp"
        android:layout_marginTop="8dp"
        android:background="#4682B4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_rating_tv" />


    <TextView
        android:id="@+id/edit_date_tv"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/edit_middle_view"
        android:layout_marginTop="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/edit_content_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:hint="@string/content_text"
        android:textSize="16sp"
        android:gravity="top"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_date_tv"
        app:layout_constraintBottom_toTopOf="@id/view_guideLine"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/view_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />

    <View
        android:id="@+id/edit_bottom_view"
        android:layout_width="wrap_content"
        android:layout_height="0.3dp"
        android:layout_marginTop="8dp"
        android:background="#4682B4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_guideLine" />

    <TextView
        android:id="@+id/pick_photo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/photo_text"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:drawableTop="@drawable/ic_photo_camera_black_24dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_bottom_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        />

    <ImageView
        android:id="@+id/edit_photo_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/edit_bottom_view"
        app:layout_constraintLeft_toRightOf="@+id/pick_photo_tv"
        app:layout_constraintRight_toRightOf="parent"/>




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/edit_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"
        />
    <View
        android:id="@+id/edit_view1"
        android:layout_width="wrap_content"
        android:layout_height="0.3dp"
        android:background="#4682B4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_guideLine" />

    <TextView
        android:id="@+id/edit_address_tv"
        android:text="@string/address_text"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_guideLine"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/edit_address_et"
        android:hint="@string/address_hint"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="right"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@id/edit_guideLine"
        app:layout_constraintLeft_toRightOf="@+id/edit_address_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_address_tv"
        />

    <View
        android:id="@+id/edit_view2"
        android:layout_width="wrap_content"
        android:layout_height="0.3dp"
        android:background="#4682B4"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_address_tv" />


    <TextView
        android:id="@+id/edit_phoneNumber_tv"
        android:text="@string/phone_text"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_view2"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/edit_phoneNumber_et"
        android:hint="@string/phone_hint"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="right"
        android:inputType="numberSigned"
        android:digits="0123456789-"
        android:lines="1"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_view2"
        app:layout_constraintLeft_toRightOf="@+id/write_phoneNumber_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_phoneNumber_tv"
        />
    <View
        android:id="@+id/edit_view3"
        android:layout_width="wrap_content"
        android:layout_height="0.3dp"
        android:background="#4682B4"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_phoneNumber_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>