<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <TextView
        android:id="@+id/main_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/Recommendation_text"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/main_search_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search_black_32dp"
        tools:ignore="VectorDrawableCompat" />

    <View
        android:id="@+id/main_view"
        android:layout_width="wrap_content"
        android:layout_height="0.3dp"
        android:layout_marginTop="8dp"
        android:background="#4682B4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv" />
    <TextView
        android:id="@+id/whatEatToday_tv"
        android:text="오늘 뭐 먹지?"
        android:padding="4dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_view"/>


    <ListView
        android:id="@+id/main_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/whatEatToday_tv"
        app:layout_constraintBottom_toTopOf="@id/main_view2">


    </ListView>


    <View
        android:id="@+id/main_view2"
        android:layout_width="wrap_content"
        android:layout_height="0.3dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="60dp"
        android:background="#4682B4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/main_home_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Recommendation_text"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/main_noteList_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:drawableTop="@drawable/ic_home_black_24dp"
        />

    <TextView
        android:id="@+id/main_noteList_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_text"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/main_home_tv"
        app:layout_constraintRight_toLeftOf="@+id/main_my_tv"
        android:drawableTop="@drawable/ic_import_contacts_black_24dp"
        />

<!--    <TextView-->
<!--        android:id="@+id/main_write_tv"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/writingOut_text"-->
<!--        android:textSize="16sp"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toRightOf="@+id/main_noteList_tv"-->
<!--        app:layout_constraintRight_toLeftOf="@+id/main_my_tv"-->
<!--        android:drawableTop="@drawable/ic_create_black_24dp"-->
<!--        />-->

    <TextView
        android:id="@+id/main_my_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myPage_text"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/main_noteList_tv"
        app:layout_constraintRight_toRightOf="parent"
        android:drawableTop="@drawable/ic_person_black_24dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>