<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.NoteActivity">

    <TextView
        android:id="@+id/note_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/note_text"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/note_search_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintRight_toLeftOf="@+id/note_addPost_iv"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search_black_32dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/note_addPost_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add_black_32dp"
        tools:ignore="VectorDrawableCompat" />

    <View
        android:id="@+id/note_view"
        android:layout_width="wrap_content"
        android:layout_height="0.3dp"
        android:layout_marginTop="8dp"
        android:background="#4682B4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_tv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/note_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="4dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingBottom="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_view"
        app:layout_constraintBottom_toTopOf="@+id/note_view2"
        >
    </androidx.recyclerview.widget.RecyclerView>



    <View
        android:id="@+id/note_view2"
        android:layout_width="wrap_content"
        android:layout_height="0.3dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="60dp"
        android:background="#4682B4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/note_home_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Recommendation_text"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/note_noteList_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:drawableTop="@drawable/ic_home_black_24dp"
        />

    <TextView
        android:id="@+id/note_noteList_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_text"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/note_home_tv"
        app:layout_constraintRight_toLeftOf="@+id/note_my_tv"
        android:drawableTop="@drawable/ic_import_contacts_black_24dp"
        />

<!--    <TextView-->
<!--        android:id="@+id/note_write_tv"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/writingOut_text"-->
<!--        android:textSize="16sp"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toRightOf="@+id/note_noteList_tv"-->
<!--        app:layout_constraintRight_toLeftOf="@+id/note_my_tv"-->
<!--        android:drawableTop="@drawable/ic_create_black_24dp"-->
<!--        />-->

    <TextView
        android:id="@+id/note_my_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myPage_text"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/note_noteList_tv"
        app:layout_constraintRight_toRightOf="parent"
        android:drawableTop="@drawable/ic_person_black_24dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>