<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/my_page_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MyPageActivity">

    <TextView
        android:id="@+id/myPage_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="마이페이지"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ImageView-->
<!--        android:id="@+id/write_postSave_iv"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:layout_marginRight="16dp"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:srcCompat="@drawable/ic_done_black_32dp"-->
<!--        tools:ignore="VectorDrawableCompat" />-->

    <TextView
        android:id="@+id/timer_setting_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:text="타이머 설정"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/top_view"
        android:layout_width="wrap_content"
        android:layout_height="0.3dp"
        android:layout_marginTop="8dp"
        android:background="#4682B4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myPage_tv" />


    <ImageView
        android:id="@+id/async_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_view"
        app:layout_constraintBottom_toTopOf="@id/photo_guideLine"/>

    <TextView
        android:id="@+id/async_title_tv"
        android:text="text"
        android:textSize="28sp"
        android:layout_marginLeft="16dp"
        android:textColor="#ffffff"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rate_ratingBar"/>

    <RatingBar
        android:id="@+id/rate_ratingBar"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:rating="0"
        app:layout_constraintBottom_toBottomOf="@id/photo_guideLine"
        style="?android:attr/ratingBarStyleSmall"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/RatingBar"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/photo_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        />

    <TextView
        android:id="@+id/text"
        android:text="총 작성글 : "
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_guideLine"
        app:layout_constraintBottom_toTopOf="@id/list_guideLine"
        android:layout_marginLeft="16dp" />
    <TextView
        android:id="@+id/total_writing_tv"
        android:text=""
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/text"
        app:layout_constraintTop_toBottomOf="@+id/photo_guideLine"
        app:layout_constraintBottom_toTopOf="@id/list_guideLine"
        android:layout_marginLeft="16dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <TextView
        android:id="@+id/text1"
        android:text="북마크 : "
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_guideLine"
        app:layout_constraintTop_toBottomOf="@+id/photo_guideLine"
        app:layout_constraintBottom_toTopOf="@id/list_guideLine"
        android:layout_marginLeft="16dp" />
    <TextView
        android:id="@+id/bookmark_writing_tv"
        android:text=""
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/text1"
        app:layout_constraintTop_toBottomOf="@+id/photo_guideLine"
        app:layout_constraintBottom_toTopOf="@id/list_guideLine"
        android:layout_marginLeft="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/list_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"
        />

    <fragment
        android:id="@+id/map_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_guideLine"
        app:layout_constraintBottom_toTopOf="@id/bottom_view"
        tools:context = ".MyPageActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        />

    <View
        android:id="@+id/bottom_view"
        android:layout_width="wrap_content"
        android:layout_height="0.3dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="60dp"
        android:background="#4682B4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/recommend_button_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Recommendation_text"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintRight_toLeftOf="@id/note_button_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:drawableTop="@drawable/ic_home_black_24dp"
        />

    <TextView
        android:id="@+id/note_button_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_text"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/recommend_button_tv"
        app:layout_constraintRight_toLeftOf="@+id/my_page_button_tv"
        android:drawableTop="@drawable/ic_import_contacts_black_24dp"
        />
    <TextView
        android:id="@+id/my_page_button_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myPage_text"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/note_button_tv"
        app:layout_constraintRight_toRightOf="parent"
        android:drawableTop="@drawable/ic_person_black_24dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>